# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/poetry-testi/: pyproject.toml
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl_sekvenssikaavio.md  monopoli_luokkakaavio.md
sovellus/: pyproject.toml  tasks.py
sovellus/data/: database.sqlite
sovellus/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
sovellus/src/: build.py  config.py  database_connection.py  index.py  initialize_database.py
sovellus/src/data/: database.sqlite  test-database.sqlite
sovellus/src/entities/: counter.py  user.py
sovellus/src/repositories/: CounterRepository.py  counter_repository.py  user_repository.py
sovellus/src/services/: counter_service.py
sovellus/src/tests/: counter_entity_test.py  counter_repository_test.py  counter_service_test.py  user_entity_test.py  user_repository_test.py
sovellus/src/ui/: counter_view.py  create_user_view.py  login_view.py  ui.py
